[gd_scene load_steps=4 format=3 uid="uid://dlqkt4nobjp6n"]

[ext_resource type="Theme" uid="uid://c78axvp43v5yl" path="res://Data/Theme/start_ui_theme.tres" id="1_e3nsy"]
[ext_resource type="Script" path="res://Scenes/Ui/start_ui.gd" id="2_hstqr"]
[ext_resource type="Script" path="res://Scenes/Ui/AnimationComponent.gd" id="2_hvv3s"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e3nsy")
script = ExtResource("2_hstqr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999994, 1)

[node name="AnimationComponent" type="Node" parent="PanelContainer"]
script = ExtResource("2_hvv3s")
enter_animation = true
enter_time = 0.5
enter_delay = 0.2
enter_transition = 9
enter_easing = 2
enter_scale = Vector2(0, 0)
enter_modulate = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 380
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 380
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.32
bbcode_enabled = true
text = "那束[color=yellow]光[/color]，会到哪去？"
tab_size = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "开始游戏"

[node name="AnimationComponent" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Start" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_hvv3s")
enter_animation = true
hover_scale = Vector2(1.2, 1.2)
wait_for = NodePath("../../../../../../AnimationComponent")
enter_time = 0.4
enter_delay = 0.1
enter_scale = Vector2(0, 0)

[node name="Contine" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "继续游戏"

[node name="AnimationComponent2" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Contine" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_hvv3s")
enter_animation = true
hover_scale = Vector2(1.2, 1.2)
wait_for = NodePath("../../../../../../AnimationComponent")
enter_time = 0.5
enter_delay = 0.1
enter_scale = Vector2(0, 0)

[node name="Set" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "设置"

[node name="AnimationComponent3" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Set" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_hvv3s")
enter_animation = true
hover_scale = Vector2(1.2, 1.2)
wait_for = NodePath("../../../../../../AnimationComponent")
enter_time = 0.6
enter_delay = 0.1
enter_scale = Vector2(0, 0)

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "退出游戏"

[node name="AnimationComponent4" type="Node" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Exit" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_hvv3s")
enter_animation = true
hover_scale = Vector2(1.2, 1.2)
wait_for = NodePath("../../../../../../AnimationComponent")
enter_time = 0.7
enter_delay = 0.1
enter_scale = Vector2(0, 0)

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Contine" to="." method="_on_contine_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Set" to="." method="_on_set_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
